Bug 17652 - abidiff fails to run on libpcrecpp.so library
Summary: abidiff fails to run on libpcrecpp.so library
Status: RESOLVED FIXED
Alias: None
Product: libabigail
Classification: Unclassified
Component: default (show other bugs)
Version: unspecified
: P2 normal
Target Milestone: ---
Assignee: Dodji Seketeli
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2014-11-27 08:50 UTC by Sinny Kumari
Modified: 2014-12-11 10:44 UTC (History)
1 user (show)

See Also:
Host:
Target:
Build:
Last reconfirmed:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Sinny Kumari 2014-11-27 08:50:02 UTC
Running abidiff on libpcrecpp.so libs fails with output message:
abidiff: ../../src/abg-dwarf-reader.cc:4647: abigail::ir::translation_unit_sptr abigail::dwarf_reader::build_translation_unit_and_add_to_ir(abigail::dwarf_reader::read_context&, Dwarf_Die*, char): Assertion `(*v)->get_scope()' failed.
Aborted

Libraries sources:
----------------
rpm1 -  https://kojipkgs.fedoraproject.org//packages/pcre/8.32/11.fc19/x86_64/pcre-8.32-11.fc19.x86_64.rpm
debuginfo - https://kojipkgs.fedoraproject.org//packages/pcre/8.32/11.fc19/x86_64/pcre-debuginfo-8.32-11.fc19.x86_64.rpm

rpm2 - https://kojipkgs.fedoraproject.org//packages/pcre/8.35/8.fc21/x86_64/pcre-8.35-8.fc21.x86_64.rpm
debuginfo - https://kojipkgs.fedoraproject.org//packages/pcre/8.35/8.fc21/x86_64/pcre-debuginfo-8.35-8.fc21.x86_64.rpm
Comment 1 Dodji Seketeli 2014-12-11 10:44:29 UTC
This should be fixed by commit https://sourceware.org/git/?p=libabigail.git;a=commit;h=04abbd1d44b092995e36e6d6337c98a0ed79d3cc.