Fix accidentally removing the scope of variables when fixing them up

This is about bug
https://sourceware.org/bugzilla/show_bug.cgi?id=17652.  Some old DWARF
producers emit incomplete debug info for static data members.  We
currently detect this and fix the resulting constructed variables up.
During this fix up, it appears that we sometimes accidentally remove
the scope of some variables.  Fixed thus.

	* src/abg-dwarf-reader.cc (build_translation_unit_and_add_to_ir):
	During var decl fixup, remove the scope of a variable only when we
	are sure that we want to re-scope it.

Signed-off-by: Dodji Seketeli <dodji@redhat.com>